src/objects/Apttus_Config2__OrderLineItem__c.object
<CustomObject>
    <fields>
        <fullName>APTS_Machine_Type__c</fullName>
        <description>This is the Machine Type</description>
        <label>Machine Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Large</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Material_Availability_Date__c</fullName>
        <description>This is the Material Availability Date(Picking Date)</description>
        <label>Material Availability Date(Picking Date)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Migrated_Asset_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Migrated ALI(for data migration)</label>
        <referenceTo>Apttus_Config2__AssetLineItem__c</referenceTo>
        <relationshipLabel>Order Line Items (Migrated ALI(for data migration))</relationshipLabel>
        <relationshipName>Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Movement_From_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Movement From Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Order Line Items (Movement From Account)</relationshipLabel>
        <relationshipName>Order_Line_Items_MoveFrom</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Movement_From_Area__c</fullName>
        <description>This is the Movement From Area</description>
        <label>Movement From Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Movement_From_Building__c</fullName>
        <description>This is the Movement From Building</description>
        <label>Movement From Building</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Movement_From_CustomerReference__c</fullName>
        <description>This is the Movement From CustomerReference</description>
        <label>Movement From CustomerReference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Movement_From_Floor__c</fullName>
        <description>This is the Movement From Floor</description>
        <label>Movement From Floor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Movement_To_Area__c</fullName>
        <description>This is the Movement To Area</description>
        <label>Movement To Area</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Movement_To_Building__c</fullName>
        <description>This is the Movement To Building</description>
        <label>Movement To Building</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Movement_To_CustomerReference__c</fullName>
        <description>This is the Movement To CustomerReference</description>
        <label>Movement To CustomerReference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Movement_To_Floor__c</fullName>
        <description>This is the Movement To Floor</description>
        <label>Movement To Floor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Moving_Date__c</fullName>
        <description>This is the Moving Date</description>
        <label>Moving Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Net_Amount_Inc_taxes__c</fullName>
        <formula>IF( 
					OR (Apttus_Config2__BasePriceOverride__c != null, Apttus_Config2__BasePriceOverride__c != 0 ) ,
					    Apttus_Config2__BasePriceOverride__c +  APTS_Tax__c ,
					    Apttus_Config2__NetPrice__c +  APTS_Tax__c 
	)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Amount(Inc.taxes)</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Net_List_Price_Condition__c</fullName>
        <formula>IF(
((ISPICKVAL( Apttus_Config2__OrderId__r.APTS_SAP_OrderType__c , &apos;XC01&apos;)  || ISPICKVAL(Apttus_Config2__OrderId__r.APTS_SAP_OrderType__c, &apos;XD01&apos;)) &amp;&amp; 
      NOT( ISBLANK( Apttus_Config2__BasePriceOverride__c ) ) ), 
  &apos;ZP01&apos; , 
IF(((Apttus_Config2__HasOptions__c &lt;&gt; TRUE &amp;&amp; OR(Apttus_Config2__BasePriceOverride__c &gt;= 0,Apttus_Config2__BasePrice__c &gt;=  0)) || (ISPICKVAL(Apttus_Config2__LineType__c,&quot;Option&quot;) &amp;&amp; ISPICKVAL(Apttus_Config2__OrderId__r.APTS_SAP_OrderType__c,&apos;XB13&apos;))), &apos;ZP01&apos;,&apos;&apos;))</formula>
        <label>Net List Price Condition</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Net_List_Price__c</fullName>
        <formula>IF(
(ISPICKVAL(Apttus_Config2__OrderId__r.APTS_SAP_OrderType__c, &apos;XD12&apos;) &amp;&amp; 
NOT( ISBLANK( Apttus_Config2__BasePriceOverride__c ) ) ),
Apttus_Config2__BasePriceOverride__c , 
IF(Apttus_Config2__HasOptions__c &lt;&gt; TRUE,IF( 
Apttus_Config2__BasePriceOverride__c &gt;= 0, (Apttus_Config2__Quantity__c*Apttus_Config2__BasePriceOverride__c), (Apttus_Config2__Quantity__c*Apttus_Config2__BasePrice__c)),0))</formula>
        <label>Net List Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Net_Price_Inc_taxes__c</fullName>
        <label>Net Price(Inc. taxes)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_No_Fulfillment_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is the No Fulfillment Required</description>
        <label>No Fulfillment Required?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Option_Group_Text__c</fullName>
        <label>Option Group Text</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Order_Item_Type__c</fullName>
        <description>This is the Order Item Type</description>
        <label>Order Item Type</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Order_LSP_Detail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Order LSP Detail</description>
        <label>Order LSP Detail</label>
        <referenceTo>APTS_Order_LSP_Details__c</referenceTo>
        <relationshipLabel>Order Line Items</relationshipLabel>
        <relationshipName>Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Order_Line_SAP_ID__c</fullName>
        <description>Order Line Item Id in SAP</description>
        <externalId>true</externalId>
        <label>Order Line SAP ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Order_Sub_Type_Formula__c</fullName>
        <formula>TEXT(Apttus_Config2__OrderId__r.APTS_Order_Sub_Type__c)</formula>
        <label>Order Sub Type Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Order_Sub_Type__c</fullName>
        <description>This is the sub type of Order Line Item</description>
        <label>Order Sub Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard Order</fullName>
                </value>
                <value>
                    <fullName>Standard Return</fullName>
                </value>
                <value>
                    <fullName>Unplanned return</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Original_Order_Line_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the Original Order Line Item</description>
        <label>Original Order Line Item</label>
        <referenceTo>Apttus_Config2__OrderLineItem__c</referenceTo>
        <relationshipLabel>Order Line Items (Original Order Line Item)</relationshipLabel>
        <relationshipName>Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Own_By_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is the Own By Customer</description>
        <label>Own By Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_OwnedByCustomer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Owned By Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Packaging_Requirements__c</fullName>
        <description>This is the Packaging requirements</description>
        <label>Packaging Requirements</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Parent_Order_Line_Item__c</fullName>
        <label>Parent Order Line Item</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_PayerIngredients__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payer Ingredients</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Order Line Items (Payer Ingredients)</relationshipLabel>
        <relationshipName>Order_Line_Items2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_PayerMachinesServices__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payer Machines &amp; Services</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Order Line Items (Payer Machines &amp; Services)</relationshipLabel>
        <relationshipName>Order_Line_Items3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Payment_Method__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Method</label>
        <referenceTo>APTS_Payment_Method__c</referenceTo>
        <relationshipLabel>Order Line Items</relationshipLabel>
        <relationshipName>Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_PhysicalAssetExtId__c</fullName>
        <label>Physical Asset External Id</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Physical_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Physical Asset</label>
        <referenceTo>PhysicalAsset__c</referenceTo>
        <relationshipLabel>Order Line Items</relationshipLabel>
        <relationshipName>Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Physical_Machine_Option__c</fullName>
        <formula>IF(OR((Apttus_Config2__DerivedFromId__r.Apttus_Config2__OptionGroupLabel__c = &apos;Machine&apos;), (Apttus_Config2__DerivedFromId__r.Apttus_Config2__OptionGroupLabel__c = &apos;Water System&apos;),
(Apttus_Config2__DerivedFromId__r.Apttus_Config2__OptionGroupLabel__c = &apos;Cabinet&apos;),
(Apttus_Config2__DerivedFromId__r.Apttus_Config2__OptionGroupLabel__c = &apos;Payment System&apos;),
(Apttus_Config2__DerivedFromId__r.Apttus_Config2__OptionGroupLabel__c = &apos;Installation Option&apos;),
(Apttus_Config2__DerivedFromId__r.Apttus_Config2__OptionGroupLabel__c = &apos;Connectivity System&apos;))
, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Physical/Machine Option</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Picking_Date__c</fullName>
        <description>This is the Picking Date</description>
        <label>Picking Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Plant_Code__c</fullName>
        <description>This is the Plant Code</description>
        <label>Plant Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Plant_Details__c</fullName>
        <label>Plant Details</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_PlugPlay__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Plug and play indicator from product2</description>
        <label>Plug &amp; Play</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Plug_and_Play_Indicator__c</fullName>
        <description>This is the Plug and Play Indicator</description>
        <label>Plug and Play Indicator</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Previous_Asset_Details__c</fullName>
        <description>This is the Previous Asset Details</description>
        <label>Previous Asset Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Previous_Ship_To_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the Previous Ship to Location</description>
        <label>Previous Ship To Location</label>
        <referenceTo>Apttus_Config2__AccountLocation__c</referenceTo>
        <relationshipLabel>Order Line Items (Previous Ship To Location)</relationshipLabel>
        <relationshipName>Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Price_Type__c</fullName>
        <label>Usage Cost Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Paid</fullName>
                </value>
                <value>
                    <fullName>Free Vend</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Pricing_Condition_Type__c</fullName>
        <description>This is the Pricing Condition Type</description>
        <label>Pricing Condition Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Product_UoM__c</fullName>
        <description>Product UOM Field, as per SAP&apos;s Requirement.</description>
        <label>Product UoM</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PKL_UOM</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Reason_Code__c</fullName>
        <description>Discount Reason Code</description>
        <label>Reason Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Reason_For_Rejection__c</fullName>
        <description>This is the Reason for Rejection</description>
        <label>Reason For Rejection</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>63</fullName>
                </value>
                <value>
                    <fullName>98</fullName>
                </value>
                <value>
                    <fullName>99</fullName>
                </value>
                <value>
                    <fullName>C1</fullName>
                </value>
                <value>
                    <fullName>C2</fullName>
                </value>
                <value>
                    <fullName>C3</fullName>
                </value>
                <value>
                    <fullName>C4</fullName>
                </value>
                <value>
                    <fullName>C5</fullName>
                </value>
                <value>
                    <fullName>C6</fullName>
                </value>
                <value>
                    <fullName>C7</fullName>
                </value>
                <value>
                    <fullName>C8</fullName>
                </value>
                <value>
                    <fullName>D1</fullName>
                </value>
                <value>
                    <fullName>D2</fullName>
                </value>
                <value>
                    <fullName>D3</fullName>
                </value>
                <value>
                    <fullName>D4</fullName>
                </value>
                <value>
                    <fullName>D5</fullName>
                </value>
                <value>
                    <fullName>D6</fullName>
                </value>
                <value>
                    <fullName>D7</fullName>
                </value>
                <value>
                    <fullName>D8</fullName>
                </value>
                <value>
                    <fullName>D9</fullName>
                </value>
                <value>
                    <fullName>L1</fullName>
                </value>
                <value>
                    <fullName>L2</fullName>
                </value>
                <value>
                    <fullName>L3</fullName>
                </value>
                <value>
                    <fullName>L4</fullName>
                </value>
                <value>
                    <fullName>P1</fullName>
                </value>
                <value>
                    <fullName>P2</fullName>
                </value>
                <value>
                    <fullName>P3</fullName>
                </value>
                <value>
                    <fullName>R1</fullName>
                </value>
                <value>
                    <fullName>R2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Reason_Text__c</fullName>
        <label>Reason Text</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Damaged goods</fullName>
                </value>
                <value>
                    <fullName>Promotions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Recipe_Settings__c</fullName>
        <description>This is the Recipe Settings</description>
        <label>Recipe Settings</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>APTS_RefurbishedMachine__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is the Refurbished Machine</description>
        <label>Refurbished Machine</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Refurbished_or_New__c</fullName>
        <description>This is to indicate if the field is Refurbished or New.</description>
        <label>Refurbished/New ?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>N</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>U</fullName>
                    <label>Refurbished</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Replaced_Product_Code__c</fullName>
        <formula>IF(Apttus_Config2__PriceListItemId__c &lt;&gt; NULL,


IF(Apttus_Config2__PriceListItemId__r.APTS_Product_Code__c &lt;&gt; NULL, Apttus_Config2__PriceListItemId__r.APTS_Product_Code__c, Apttus_Config2__PriceListItemId__r.Apttus_Config2__ProductCode__c),

 Apttus_Config2__ProductId__r.ProductCode)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Original/Replaced Product Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Requested_Delivery_Date__c</fullName>
        <description>This is the Requested Delivery Date</description>
        <label>Requested Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Requested_Installation_Date__c</fullName>
        <label>Requested Installation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Requires_LSP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Requires LSP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Returned_Quantity__c</fullName>
        <description>This is the Returned Quantity</description>
        <label>Returned Quantity</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>APTS_Route_Restrictions__c</fullName>
        <description>This is the Route restrictions</description>
        <label>Route Restrictions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_SAP_Delivery_Number__c</fullName>
        <label>APTS SAP Delivery Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_SAP_OrderType__c</fullName>
        <description>This is the SAP OrderType</description>
        <label>SAP OrderType</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>XA01</fullName>
                </value>
                <value>
                    <fullName>XA02</fullName>
                </value>
                <value>
                    <fullName>XA13</fullName>
                </value>
                <value>
                    <fullName>XA14</fullName>
                </value>
                <value>
                    <fullName>XB01</fullName>
                </value>
                <value>
                    <fullName>XB02</fullName>
                </value>
                <value>
                    <fullName>XB13</fullName>
                </value>
                <value>
                    <fullName>XL01</fullName>
                </value>
                <value>
                    <fullName>XC01</fullName>
                </value>
                <value>
                    <fullName>XD01</fullName>
                </value>
                <value>
                    <fullName>XA23</fullName>
                </value>
                <value>
                    <fullName>XB05</fullName>
                </value>
                <value>
                    <fullName>XB03</fullName>
                </value>
                <value>
                    <fullName>XB04</fullName>
                </value>
                <value>
                    <fullName>XA04</fullName>
                </value>
                <value>
                    <fullName>XA07</fullName>
                </value>
                <value>
                    <fullName>XA03</fullName>
                </value>
                <value>
                    <fullName>XD09</fullName>
                </value>
                <value>
                    <fullName>XD12</fullName>
                </value>
                <value>
                    <fullName>XA06</fullName>
                </value>
                <value>
                    <fullName>XC09</fullName>
                </value>
                <value>
                    <fullName>XB23</fullName>
                </value>
                <value>
                    <fullName>XD02</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_SAP_Order_Line_Item_Number__c</fullName>
        <description>This field, shall be updated by SAP.</description>
        <label>SAP Order Line Item Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Sales_Order_Item_Change_Indicator__c</fullName>
        <description>This is the Sales Order Item Change Indicator</description>
        <label>Sales Order Item Change Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>001</fullName>
                </value>
                <value>
                    <fullName>002</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Salesforce_Unique_Item_Number__c</fullName>
        <description>This is the Salesforce Unique Item Number</description>
        <formula>IF(ISPICKVAL(Apttus_Config2__ProductId__r.Apttus_Config2__ConfigurationType__c, &apos;Standalone&apos;),
IF((ISPICKVAL(Apttus_Config2__ChargeType__c, &apos;Sales Price&apos;) &amp;&amp; ISPICKVAL(APTS_SAP_OrderType__c, &apos;XA14&apos;)),&apos;001&apos;+Id , &apos;000&apos;+Id),
LPAD(TEXT(Apttus_Config2__LineNumber__c),3,&apos;0&apos;) + Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Salesforce Unique Item Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Serial_Number2__c</fullName>
        <label>Serial Number 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Serial_Number__c</fullName>
        <description>This is the Serial Number</description>
        <label>Serial Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Services_within_Machine__c</fullName>
        <formula>IF(OR((Apttus_Config2__DerivedFromId__r.Apttus_Config2__OptionGroupLabel__c = &apos;Technical Service&apos;), (Apttus_Config2__DerivedFromId__r.Apttus_Config2__OptionGroupLabel__c = &apos;Response Time&apos;), 
(Apttus_Config2__DerivedFromId__r.Apttus_Config2__OptionGroupLabel__c = &apos;Service Window&apos;), 
(Apttus_Config2__DerivedFromId__r.Apttus_Config2__OptionGroupLabel__c = &apos;Preventive Maintenance&apos;), 
(Apttus_Config2__DerivedFromId__r.Apttus_Config2__OptionGroupLabel__c = &apos;Value Added Service&apos;), 
(Apttus_Config2__DerivedFromId__r.Apttus_Config2__OptionGroupLabel__c = &apos;Connected Coffee Service&apos;),(Apttus_Config2__DerivedFromId__r.Apttus_Config2__OptionGroupLabel__c = &apos;Machine Care&apos;),(Apttus_Config2__DerivedFromId__r.Apttus_Config2__OptionGroupLabel__c = &apos;Value Added Machine Care&apos;),(Apttus_Config2__DerivedFromId__r.Apttus_Config2__OptionGroupLabel__c = &apos;Installation Service&apos;),(Apttus_Config2__DerivedFromId__r.Apttus_Config2__OptionGroupLabel__c = &apos;Conversion Service&apos;)) , TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Services within Machine</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Ship_To_Location_SAP_Customer_Id__c</fullName>
        <description>This is the Ship To Location SAP Customer Id</description>
        <formula>Apttus_Config2__OrderId__r.APTS_Ship_To_Location_SAP_Customer_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship To Location SAP Customer Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_SmokingArea__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is the Smoking Area</description>
        <label>Smoking Area</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Sold_To_SAP_Customer_ID__c</fullName>
        <description>This is the Sold To SAP Customer ID</description>
        <formula>Apttus_Config2__OrderId__r.APTS_Sold_To_SAP_Customer_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sold To SAP Customer ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Source_Line_Number__c</fullName>
        <description>This denotes the unique identifier for each line item (product) in cart, generated in EPI</description>
        <label>Source Line Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Source_Order_Number__c</fullName>
        <description>The unique identifier of the parent order (order header) number for each line item</description>
        <label>Parent Source Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Spare_Parts_Coverage_Condition__c</fullName>
        <formula>IF (APTS_Option_Group_Text__c = &apos;Technical Service&apos;, &apos;YSFS&apos;,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Spare Parts Coverage Condition</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Spare_Parts_Coverage__c</fullName>
        <description>Spare Parts Coverage</description>
        <label>Spare Parts Coverage</label>
        <precision>18</precision>
        <scale>5</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_StairClimber__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is the Is Stair Climber Needed</description>
        <label>Stair Climber</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Status__c</fullName>
        <description>This is the Custom Status ; to manage statuses in Submit Order &amp; Update Order logics.</description>
        <label>Status Custom</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>In Fulfillment</fullName>
                </value>
                <value>
                    <fullName>Partially Fulfilled</fullName>
                </value>
                <value>
                    <fullName>Fulfilled</fullName>
                </value>
                <value>
                    <fullName>Activated</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>In Amendment</fullName>
                </value>
                <value>
                    <fullName>Being Amended</fullName>
                </value>
                <value>
                    <fullName>Superseded</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Pending Cancellation</fullName>
                </value>
                <value>
                    <fullName>Being Cancelled</fullName>
                </value>
                <value>
                    <fullName>Returned</fullName>
                </value>
                <value>
                    <fullName>Sent For Invoicing</fullName>
                    <isActive>false</isActive>
                    <label>Sent For Invoicing</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>APTS_Stop_Over_Location__c</fullName>
        <description>This is the Stop Over Location</description>
        <label>Stop Over Location</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Stop_Over_Point__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is the Stop Over Point</description>
        <label>Stop Over Point</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Stop_RtR_Transactions_from__c</fullName>
        <description>Threshold Date field to stop RTR Transaction creation</description>
        <label>Stop RtR Transactions from</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Stopover_City__c</fullName>
        <description>This is the Stopover City</description>
        <label>Stopover City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Stopover_Country__c</fullName>
        <description>This is the Stopover Country</description>
        <label>Stopover Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Stopover_Postal_Code__c</fullName>
        <description>This is the Stopover Postal Code </description>
        <label>Stopover Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Stopover_Street_and_House_Number__c</fullName>
        <description>This is the Stopover Street and House Number</description>
        <label>Stopover Street and House Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Stopover__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Stopover</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>APTS_Sub_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub Category</label>
        <referenceTo>Apttus_Config2__ClassificationHierarchy__c</referenceTo>
        <relationshipLabel>Order Line Items (Sub Category)</relationshipLabel>
        <relationshipName>Sub_Category_Order_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>